# film-rating-website

./: README.org  database.txt  film-rating-website.cabal  stack.yaml  testDatabase.txt
src/: Main.hs
